# safe-authenticator-cli

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile.build  Jenkinsfile  Makefile  README.md
.cargo-husky/hooks/: pre-commit
resources/: build-cache.sh  get_release_description.sh
src/: authd.rs  cli.rs  cli_helpers.rs  lib.rs  main.rs
tests/: authenticatord.rs  cli_integration.rs  test.config.json
