[package]
name = "safe_auth"
version = "0.0.1"
description = "SAFE Authenticator CLI"
authors = ["Hunter Lester <guilfordhunter@gmail.com>", "bochaco <gabrielviganotti@gmail.com>", "Josh Wilson <joshuef@gmail.com>"]
homepage = "https://maidsafe.net"
license = "GPL-3.0"
publish = false
edition = "2018"

[dependencies]
actix = "0.7.9"
actix-web = "0.7.18"
assert_cmd = "0.11.0"
log = "0.4.6"
rpassword = "3.0.1"
structopt = "0.2.14"
env_logger = "0.6.0"
safe-nd = { git = "https://github.com/maidsafe/safe-nd", branch = "stable" }
safe_authenticator = { git = "https://github.com/bochaco/safe_client_libs", branch = "temp-stable" }
safe_core = { git = "https://github.com/bochaco/safe_client_libs", branch = "temp-stable" }
routing = { package = "mock_routing", git = "https://github.com/bochaco/safe_client_libs", branch = "temp-stable" }
maidsafe_utilities = "0.18.0"
futures = "0.1.25"
rand = "0.6.5"
prettytable-rs = "^0.8"
predicates = "1.0.0"
serde = "1.0.89"
serde_json = "1.0.39"
envy = "0.4.0"
serde_derive = "1.0.89"
unwrap = "~1.2.0"
config_file_handler = "~0.11.0"

[features]
mock-network = ["safe_authenticator/mock-network"]

[patch.crates-io]
#safe_authenticator = { git = "https://github.com/bochaco/safe_client_libs", branch = "safe_authenticator-master-upgrades" }
#safe_core = { git = "https://github.com/bochaco/safe_client_libs", branch = "safe_authenticator-master-upgrades" }
#routing = { git = "https://github.com/hunterlester/routing", branch = "0.37.0-upgrades" }

[dev-dependencies]
pretty_assertions = "0.6.1"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook","user-hooks"]
