[package]
name = "safe_auth"
version = "0.3.0"
description = "SAFE Authenticator CLI"
authors = ["Hunter Lester <guilfordhunter@gmail.com>", "bochaco <gabrielviganotti@gmail.com>", "Josh Wilson <joshuef@gmail.com>"]
homepage = "https://maidsafe.net"
license = "GPL-3.0"
publish = false
edition = "2018"

[dependencies]
actix-web = "~1.0.5"
assert_cmd = "0.11.0"
log = "0.4.6"
rpassword = "3.0.1"
structopt = "0.2.14"
env_logger = "0.6.0"
safe-nd = "~0.3.0"
safe_authenticator = "~0.10.0"
safe_core = "~0.33.0"
maidsafe_utilities = "0.18.0"
futures = "0.1.25"
rand = "0.6.5"
prettytable-rs = "^0.8"
predicates = "1.0.0"
serde = "1.0.89"
serde_json = "1.0.39"
envy = "0.4.0"
serde_derive = "1.0.89"
unwrap = "~1.2.0"
config_file_handler = "~0.11.0"
threshold_crypto = "~0.3.2"
bincode = "1.1.4"
self_update = "0.5.1"

[features]
mock-network = ["safe_authenticator/mock-network"]

[patch.crates-io]
lazy_static = { git = "https://github.com/rust-lang-nursery/lazy-static.rs.git", tag = "1.3.0" }

[dev-dependencies]
pretty_assertions = "0.6.1"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook","user-hooks"]
