[package]
name = "safe_auth"
version = "0.3.0"
description = "SAFE Authenticator CLI"
authors = ["Hunter Lester <guilfordhunter@gmail.com>", "bochaco <gabrielviganotti@gmail.com>", "Josh Wilson <joshuef@gmail.com>"]
homepage = "https://maidsafe.net"
license = "GPL-3.0"
publish = false
edition = "2018"

[dependencies]
actix-web = "~1.0.5"
assert_cmd = "0.11.0"
bincode = "1.1.4"
config_file_handler = "~0.11.0"
env_logger = "0.6.0"
envy = "0.4.0"
futures = "0.1.25"
log = "0.4.6"
maidsafe_utilities = "0.18.0"
predicates = "1.0.0"
prettytable-rs = "^0.8"
rand = "0.6.5"
rpassword = "3.0.1"
safe_authenticator = { git = "https://github.com/maidsafe/safe_client_libs", branch = "master"}
safe_core = { git = "https://github.com/maidsafe/safe_client_libs", branch = "master"}
safe-nd = "~0.4.0"
self_update = "0.5.1"
serde = "1.0.89"
serde_derive = "1.0.89"
serde_json = "1.0.39"
structopt = "0.2.14"
threshold_crypto = "~0.3.2"
unwrap = "~1.2.0"

[features]
mock-network = ["safe_authenticator/mock-network"]

[patch.crates-io]
lazy_static = { git = "https://github.com/rust-lang-nursery/lazy-static.rs.git", tag = "1.3.0" }

[dev-dependencies]
pretty_assertions = "0.6.1"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook","user-hooks"]
